@@ -196,8 +196,8 @@ class PlatformSpecificHelperWin(PlatformSpecificHelperBase):
                                 "&",
                                 "if not \"!CHECKSUM_CHECK:~0,40!\"==",
                                 quoteme_double(checksum),
-                                "(echo bad checksum",
-                                quoteme_double("%PWD%/"+filepath),
+                                '(echo bad checksum',
+                                "%CD%/"+filepath,
                                 "1>&2",
                                 "&",
                                 "GOTO EXIT_ON_ERROR)",
