@@ -102,7 +102,7 @@ class open_for_read_file_or_url(object):
 
 def download_from_file_or_url(in_url, in_local_path):
     with open_for_read_file_or_url(in_url) as rfd:
-        with open(in_local_path, "w") as wfd:
+        with open(in_local_path, "wb") as wfd:
             copy_buffer = rfd.read()
             if copy_buffer:
                 wfd.write(copy_buffer)
